feat: Add JVM parameters